# monoio-gateway

./: Cargo.toml  README.md  monoio-gateway.code-workspace
examples/: Cargo.toml  acme.rs  config.json  delay.rs  http-proxy.rs  https-proxy.rs  router-with-delay.rs  tcp-proxy.rs  tcp_proxy.rs
examples/cert/: README.md  rootCA.crt  rootCA.key  rootCA.srl  server.crt  server.csr  server.key  v3.ext
monoio-gateway/: Cargo.toml
monoio-gateway-core/: Cargo.toml
monoio-gateway-core/src/: config.rs  lib.rs  service.rs
monoio-gateway-core/src/acme/: acme.rs  lets_encrypt.rs  mod.rs
monoio-gateway-core/src/balance/: balance.rs  mod.rs
monoio-gateway-core/src/discover/: change.rs  discover.rs  mod.rs
monoio-gateway-core/src/dns/: http.rs  mod.rs  tcp.rs
monoio-gateway-core/src/error/: mod.rs
monoio-gateway-core/src/http/: detect.rs  mod.rs  rewrite.rs  router.rs  ssl.rs  version.rs
monoio-gateway-core/src/transfer/: mod.rs
monoio-gateway-core/src/util/: identity.rs  mod.rs  stack.rs
monoio-gateway-services/: Cargo.toml
monoio-gateway-services/src/: lib.rs
monoio-gateway-services/src/layer/: accept.rs  acme.rs  auth.rs  delay.rs  detect.rs  dial.rs  discover.rs  endpoint.rs  listen.rs  mod.rs  proxy.rs  rewrite.rs  router.rs  timeout.rs  tls.rs  transfer.rs
monoio-gateway/src/: config.rs  gateway.rs  lib.rs  log.rs  main.rs
monoio-gateway/src/balance/: balance.rs  mod.rs  svc_list.rs
monoio-gateway/src/discover/: change.rs  mod.rs
monoio-gateway/src/dns/: h1.rs  http.rs  mod.rs  tcp.rs
monoio-gateway/src/http/: detect.rs  mod.rs  version.rs
monoio-gateway/src/layer/: accept.rs  detect.rs  mod.rs  service.rs
monoio-gateway/src/proxy/: h1.rs  mod.rs  tcp.rs
