[package]
name = "monoio-gateway-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio-gateway = {path = '../monoio-gateway'}
monoio = {path = '../../monoio/monoio'}
monoio-http = {path = '../../monoio-http/monoio-http'}


[[example]]
name = "tcp-proxy"
path = "tcp-proxy.rs"

[[example]]
name = "http-proxy"
path = "http-proxy.rs"