[package]
name = "monoio-gateway-examples"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio-gateway = {path = '../monoio-gateway'}
monoio-gateway-core = {path = '../monoio-gateway-core', features = ['full']}
monoio-gateway-services = {path = '../monoio-gateway-services'}
monoio = {version = "0.0.9", features = ['splice'], path = "../../monoio/monoio"}
monoio-http = {version = "0.0.2", path = '../../monoio-http/monoio-http'}
anyhow = "1"


[[example]]
name = "tcp-proxy"
path = "tcp-proxy.rs"

[[example]]
name = "http-proxy"
path = "http-proxy.rs"

[[example]]
name = "https-proxy"
path = "https-proxy.rs"

[[example]]
name = "router-with-delay"
path = "router-with-delay.rs"

[[example]]
name = "acme"
path = "acme.rs"
