[package]
name = "monoio-gateway-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio = {path = "../../monoio/monoio"}
monoio-http = {path = "../../monoio-http/monoio-http"}

thiserror = "1"
anyhow = "1"
http = "0.2"
http-serde = "1"

serde = "1"
serde_derive = "1"
serde_json = "1"

log = "0.4"

figlet-rs = "0.1"