[package]
name = "monoio-gateway-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio = {path = "../../monoio/monoio"}
monoio-gateway-core = {path = "../monoio-gateway-core"}
monoio-http = {path = "../../monoio-http/monoio-http"}
monoio-rustls = {path = "../../monoio-tls/monoio-rustls"}
rustls = {version = "0.20", features = ["tls12"]}

anyhow = "1"
log = "0.4"
http = "0.2"