[package]
name = "monoio-gateway"
version = "0.0.1"
edition = "2021"
keywords = ["monoio", "http", "async"]
description = "The gateway plugin for monoio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio-gateway-core = {path = "../monoio-gateway-core"}
monoio-gateway-services = {path = "../monoio-gateway-services"}

monoio = {path = "../../monoio/monoio"}
monoio-http = {path = "../../monoio-http/monoio-http"}

bytes = "1"
http = "0.2"
httparse = "1"
thiserror = "1"
anyhow = "1"
# logger
env_logger = "0.9"
log = "0.4"

tower = {version = "0.4", features = ["full"]}

serde_json = "1"